--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.6",
+    "ethers": "^6.6.0",
     "next": "13.4.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
